--- a/lwgh.csproj
+++ b/lwgh.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="ByteSize" Version="2.1.1" />
     <PackageReference Include="System.Text.Json" Version="7.0.3" />
   </ItemGroup>
 </Project>
